--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
-    <nav>
+    <header>
+      <nav>
         <ul>
             <li>
                 <a href="#">Home</a> 
@@ -26,7 +28,9 @@
                 <a href="#">Contact</a>
             </li>
         </ul>
-    </nav>
+    </nav>  
+    </header>
+    
 
     <h1 id="text">Bow to me</h1>
     <h1>look and behold</h1>
