--- a/contactpage.html
+++ b/contactpage.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CheckItOut</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a> 
+                </li>
+                <li>
+                   <a href="breakfast.html">Breakfast</a> 
+                </li>
+                <li>
+                    <a href="morning.html">Morning</a> 
+                 </li>
+                <li>
+                   <a href="outthing.html">Outing</a> 
+                </li>
+                <li>
+                   <a href="nighttime.html">Nighttime</a> 
+                </li>
+                <li>
+                    <a class="active"  href="contactpage.html">Contact</a>
+                </li>
+            </ul>
+        </nav>  
+      </header>
+
+      <footer class="footer">
+        <p>
+            This page is copyrighted by Hunter Pandt 
+        </p>
+        <p>
+             &#169 2024
+        </p>
+    </footer>
 </body>
 </html>
