--- a/outthing.html
+++ b/outthing.html
@@ -6,6 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header></header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a> 
+                </li>
+                <li>
+                   <a href="breakfast.html">Breakfast</a> 
+                </li>
+                <li>
+                    <a href="morning.html">Morning</a> 
+                 </li>
+                <li>
+                   <a class="active"  href="outthing.html">Outing</a> 
+                </li>
+                <li>
+                   <a href="nighttime.html">Nighttime</a> 
+                </li>
+                <li>
+                    <a href="contactpage.html">Contact</a>
+                </li>
+            </ul>
+        </nav>  
+      </header>
 </body>
 </html>
