--- a/contactpage.html
+++ b/contactpage.html
@@ -31,6 +31,26 @@
             </ul>
         </nav>  
       </header>
+      <section id="form">
+            <form action="https://coolinhollanddemo.azurewebsites.net" method="post">
+                <label for="gender">Mr/Ms: </label>
+                <select name="gender" id="gender">
+                    <option value="Mr.">Mr.</option>
+                    <option value="Ms.">Ms.</option>
+                </select>
+                <label for="username">Name: </label>
+                <input type="text" id="username" name="username" required>
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email" required>
+
+                <label for="message">Message:</label>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Write your message here" required></textarea>
+                
+                <input type="submit" value="Submit">
+
+            </form>
+      </section>
+      
 
       <footer class="footer">
         <p>
