homepage 90% done and working on bookstore

--- a/emma'shof.html
+++ b/emma'shof.html
@@ -6,23 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Home</a> 
+                    <img class="icon" src="img/Logo_maker_project-1.png" alt="website logo of caslte&bird" title="website logo">
                 </li>
                 <li>
-                   <a class="active" href="breakfast.html">Breakfast</a> 
+                    <a class="active" href="index.html">Home</a> 
                 </li>
                 <li>
-                    <a href="morning.html">Morning</a> 
-                 </li>
-                <li>
-                   <a href="outthing.html">Outing</a> 
+                <a href="bookstore.html">the Bookstore cafe</a> 
                 </li>
                 <li>
-                   <a href="nighttime.html">Nighttime</a> 
+                    <a href="emma'shof.html">Emma's hof</a> 
+                </li>
+                <li>
+                <a href="japanesegarden.html">japanese Garden</a> 
+                </li>
+                <li>
+                <a href="thefiddler.html">The fiddler</a> 
                 </li>
                 <li>
                     <a href="contactpage.html">Contact</a>
