--- a/contactpage.html
+++ b/contactpage.html
@@ -11,25 +11,28 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Home</a> 
+                    <img class="icon" src="img/Logo_maker_project-1.png" alt="website logo of caslte&bird" title="website logo">
                 </li>
                 <li>
-                   <a href="breakfast.html">Breakfast</a> 
+                    <a class="active" href="index.html">Home</a> 
                 </li>
                 <li>
-                    <a href="morning.html">Morning</a> 
-                 </li>
-                <li>
-                   <a href="outthing.html">Outing</a> 
+                <a href="bookstore.html">the Bookstore cafe</a> 
                 </li>
                 <li>
-                   <a href="nighttime.html">Nighttime</a> 
+                    <a href="emma'shof.html">Emma's hof</a> 
                 </li>
                 <li>
-                    <a class="active"  href="contactpage.html">Contact</a>
+                <a href="japanesegarden.html">japanese Garden</a> 
+                </li>
+                <li>
+                <a href="thefiddler.html">The fiddler</a> 
+                </li>
+                <li>
+                    <a href="contactpage.html">Contact</a>
                 </li>
             </ul>
-        </nav>  
+        </nav>   
       </header>
       <section id="form">
             <form action="https://coolinhollanddemo.azurewebsites.net" method="post">
@@ -57,7 +60,7 @@
             This page is copyrighted by Hunter Pandt 
         </p>
         <p>
-             &#169 2024
+            &copy; 2024
         </p>
     </footer>
 </body>
