create detail and homepage

--- a/emma'shof.html
+++ b/emma'shof.html
@@ -1,37 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Hunter Pandt">
+	<title>Emma's hof</title>
+	<link rel="stylesheet" type="text/css" href="/css/pages.css">
+	<link rel="stylesheet" type="javascript" href="/js/javascript.js">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <img class="icon" src="img/Logo_maker_project-1.png" alt="website logo of caslte&bird" title="website logo">
-                </li>
-                <li>
-                    <a class="active" href="index.html">Home</a> 
-                </li>
-                <li>
-                <a href="bookstore.html">the Bookstore cafe</a> 
-                </li>
-                <li>
-                    <a href="emma'shof.html">Emma's hof</a> 
-                </li>
-                <li>
-                <a href="japanesegarden.html">japanese Garden</a> 
-                </li>
-                <li>
-                <a href="thefiddler.html">The fiddler</a> 
-                </li>
-                <li>
-                    <a href="contactpage.html">Contact</a>
-                </li>
-            </ul>
-        </nav>  
-      </header>
+	<header>
+		<nav>
+			<span class="burger-icon" onclick="toggleMenu()">&#9776;</span>
+			<ul>
+				<li>
+					<img class="icon" src="img/Logo_maker_project-1.png" alt="website logo of caslte&bird" title="website logo">
+				</li>
+				<li>
+					<a href="index.html">Home</a> 
+				</li>
+				<li>
+				<a href="bookstore.html">the Bookstore cafe</a> 
+				</li>
+				<li>
+					<a class="active" href="emma'shof.html">Emma's hof</a> 
+				</li>
+				<li>
+					<a href="japanesegarden.html">japanese Garden</a> 
+				</li>
+				<li>
+					<a href="thefiddler.html">The fiddler</a> 
+				</li>
+				<li>
+					<a href="contactpage.html">Contact</a>
+				</li>
+			</ul>
+		</nav>  
+	</header>
+
+	<article class="banner"></article>
+
+	<section>
+		<article>
+			<h1>Stadstuin Emma's hof</h1>
+			<p>
+				have you ever looked for somewhere nice to go early in the morning, maybe for a morning stroll or 
+				to just sit and be lost in your <em>own little world.</em> Well heres another gem for you to find in The hague, 
+				truly recommended for bright sunny days or warm weather. this lovely park is a breath of fresh air for all to enjoy. 
+				It is open at different time throughtout the seasons so check before going
+			</p>
+		</article>
+		<figure>
+			<img src="img/emmahof1.jpg" alt="Beginning of the garden" title="Beginning of the garden"> 
+			<figcaption>
+				<strong>Beginning of the garden with a special guide</strong>
+			</figcaption>
+		</figure> 
+	</section>
+
+	<section>
+		<article>
+			<h2>Peace& tranquility</h2>
+			<p>
+				This city garden is not only a good place for a lovely morning stroll but also if
+				 you want to just zen out and enjoy nature. You’ll be able to witness their stunning 
+				 beauty and unique architechure. Besides the gorgeous view and zen atmosphere 
+				 there is also many events that take place here, that you can enjoy, 
+				 and so many memories to gain and share. 
+				If you wish to see when its open or what’s currently happen
+				 <a href="bookstore.nl">take a look here!</a> 
+			</p>
+		</article>
+		<figure>
+			<img src="img/emmahof2.jpg" alt="Nice peaceful creek in the garden" title="Nice peaceful creek in the garden"> 
+			<figcaption>
+				<strong>Down the garden a wonderful and tranquil creek</strong>
+			</figcaption>
+		</figure>
+	</section>
+
+	<section>
+		<article>
+			<h2>Productive time!</h2>
+			<p>
+				<em>The Lovely Emma’s hof(court)</em> isn’t only a lovely place to go and enjoy, 
+				but if you’re looking for away to have a produtive morning then come on down, 
+				as they accept volunteers to help maintain the garden or help with the events. 
+				Perfect place for those with active skills and want to help make a difference. 
+				Located down the road from the Theater De Regentes at Regentessekwatier, 
+				it’s a most see for all locals. You can’t miss it!
+			</p>     
+		</article>
+		<figure>
+			<img src="img/emmahof3.1.jpg" alt="Dutch oven hidden by its cafe" title="Dutch oven hidden by its cafe"> 
+			<figcaption>
+				<strong>Hidden away a beautiful authentic Dutch oven</strong>
+			</figcaption>
+		</figure>
+	</section>
+	
+	<footer>
+		<p>
+			This page is copyrighted by Hunter Pandt &copy; 2024
+		</p>
+		<aside>
+			<img src="/img/instagram-logo-instagram-icon-transparent-free-png.webp" alt="insta logo" title="insta logo">
+		</aside>
+	</footer>
 </body>
 </html>
