--- a/thefiddler.html
+++ b/thefiddler.html
@@ -3,29 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Hunter Pandt">
+    <title>The fiddler</title>
+    <link rel="stylesheet" href="/css/pages.css">
 </head>
 <body>
     <header>
         <nav>
+            <span class="burger-icon" onclick="toggleMenu()">&#9776;</span>
             <ul>
                 <li>
                     <img class="icon" src="img/Logo_maker_project-1.png" alt="website logo of caslte&bird" title="website logo">
                 </li>
                 <li>
-                    <a class="active" href="index.html">Home</a> 
+                    <a href="index.html">Home</a> 
                 </li>
                 <li>
-                <a href="bookstore.html">the Bookstore cafe</a> 
+                    <a href="bookstore.html">the Bookstore cafe</a> 
                 </li>
                 <li>
                     <a href="emma'shof.html">Emma's hof</a> 
                 </li>
                 <li>
-                <a href="japanesegarden.html">japanese Garden</a> 
+                    <a href="japanesegarden.html">japanese Garden</a> 
                 </li>
                 <li>
-                <a href="thefiddler.html">The fiddler</a> 
+                    <a class="active" href="thefiddler.html">The fiddler</a> 
                 </li>
                 <li>
                     <a href="contactpage.html">Contact</a>
@@ -33,5 +36,70 @@
             </ul>
         </nav> 
       </header>
+      <article class="banner">
+    
+      </article>
+      <section>
+          <article>
+              <h1>The Bookstore cafe</h1>
+              <p>
+                  Hungry and have no where to go. you’ve tried all the main stream places you’ve seen on 
+                  <em> TikTok or Instagram</em> and are now bored of them and want to try something new. 
+                  Well there’s many such places here in the wonderful city of Den haag, 
+                  and this here, is one of the unknown gems that litter this city. 
+                  there’s many places out there to have a lovely breakfasrt or 
+                  cup of tea/coffee but none are like this.
+              </p>
+          </article>
+          <figure>
+              <img src="img/bkstore_hallentree.jpg" alt="statue infront of peace paleis" title="statue infront of peace paleis"> 
+              <figcaption>
+                  I will eventually change this... maybe.
+              </figcaption>
+          </figure> 
+      </section>
+  
+      <section>
+          <article>
+              <h2>Read at your leisure</h2>
+              <p>
+                  The bookstore cafe is unlike any other you have seen before in Den haag located 
+                  around the beautiful Noordeinde at Noordeinde 39 that’s 
+                  where you can find this great gem. A nice relaxing atmosphere, 
+                  this cafe hosts a special theme where you as eat you are surrounded by 
+                  books you can pick and choose from and read at your leisure, and at the end you can choose buy them or any book that caught your fancy. this is a perfect 
+                  place to enjoy your breakfast and start your day. if you want to <a href="bookstore.nl">see more you can explore their site</a> 
+              </p>
+          </article>
+          <figure>
+              <img src="img/bkstore_hallway.jpg" alt="statue infront of peace paleis" title="statue infront of peace paleis"> 
+              <figcaption>
+                  I will eventually change this... maybe.
+              </figcaption>
+          </figure>
+      </section>
+      <section>
+          <article>
+              <h2>Insta worthy</h2>
+              <p>
+                  Other than the delicous food and drinks, the vibe and looks of this cafe is something else.
+                  Truly unique compare to the beautiful stores surrounding it. 
+                  Which in its own way makes it stand out, 
+                  it’s also a great place to post your instagram stories and pictures.
+              </p>     
+          </article>
+          <figure>
+              <img src="img/bkstore_pattio.jpg" alt="statue infront of peace paleis" title="statue infront of peace paleis"> 
+              <figcaption>
+                  I will eventually change this... maybe.
+              </figcaption>
+          </figure>
+      </section>
+      
+      <footer>
+          <p>
+              This page is copyrighted by Hunter Pandt &copy; 2024
+          </p>
+      </footer>
 </body>
 </html>
