--- a/emma'shof.html
+++ b/emma'shof.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Hunter Pandt">
+	<meta name="keywords" content="travel, hidden gems, sightseeing, The Hague, local guides" />
+
 	<title>Emma's hof</title>
 	<link rel="stylesheet" type="text/css" href="/css/pages.css">
-	<link rel="stylesheet" type="javascript" href="/js/javascript.js">
 </head>
 <body>
 	<header>
@@ -68,7 +69,7 @@
 				 there is also many events that take place here, that you can enjoy, 
 				 and so many memories to gain and share. 
 				If you wish to see when its open or what’s currently happen
-				 <a href="bookstore.nl">take a look here!</a> 
+				 <a href="https://www.emmashof.nl/">take a look here!</a> 
 			</p>
 		</article>
 		<figure>
