--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Hunter Pandt">
+    <meta name="keywords" content="travel, hidden gems, sightseeing, The Hague, local guides" />
+    <meta name="description" content="Discover hidden gems in The Hague, from charming cafes to serene gardens, with our comprehensive local guide. We plan on adding more to the future but for now we've from 4 hidden gems all around den haag for locals and tourist to explore and experience. From a beuatiful cafe to a trquil and relaxing park so explore at your own leisure and try something new." />
     <link rel="shortcut icon" href="img/Logo_maker_project-1.png" type="image/x-icon">
     <title>CheckItOut</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
@@ -30,6 +32,9 @@
                 </li>
                 <li>
                 <a href="thefiddler.html">The fiddler</a> 
+                </li>
+                <li>
+                    <a href="table.html">Table</a> 
                 </li>
                 <li>
                     <a href="contactpage.html">Contact</a>
