--- a/japanesegarden.html
+++ b/japanesegarden.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Hunter Pandt">
+    <meta name="keywords" content="travel, hidden gems, sightseeing, The Hague, local guides" />
+
     <title>Japanese Garden</title>
     <link rel="stylesheet" href="/css/pages.css">
 </head>
@@ -36,62 +38,63 @@
             </ul>
         </nav>   
     </header>
-    <article class="banner">
-    
-    </article>
+    <article class="banner"></article>
+
     <section>
         <article>
-            <h1>The Bookstore cafe</h1>
+            <h1>The Japanese Garden</h1>
             <p>
-                Hungry and have no where to go. you’ve tried all the main stream places you’ve seen on 
-                <em> TikTok or Instagram</em> and are now bored of them and want to try something new. 
-                Well there’s many such places here in the wonderful city of Den haag, 
-                and this here, is one of the unknown gems that litter this city. 
-                there’s many places out there to have a lovely breakfasrt or 
-                cup of tea/coffee but none are like this.
+                <em>Every wanted to get away far away</em>, but dont want to leave the city, 
+                then here is the perfect gem for you. Come down to Landgoed Clingendael, 
+                and be enchanted by this wonderful park, that’s like no other. 
+                Here at the japanese Garden, 
+                you’ll be able to experience a small pice of japan, without going far.
             </p>
         </article>
         <figure>
-            <img src="img/bkstore_hallentree.jpg" alt="statue infront of peace paleis" title="statue infront of peace paleis"> 
+            <img src="img/japanGarden1.jpg" alt="Authentic japanese bridge and hut" title="Authentic japanese bridge and hut"> 
             <figcaption>
-                I will eventually change this... maybe.
+                <strong>Authentic japanese bridge and hut</strong>
             </figcaption>
         </figure> 
     </section>
 
     <section>
         <article>
-            <h2>Read at your leisure</h2>
+            <h2>Breathtaking view</h2>
             <p>
-                The bookstore cafe is unlike any other you have seen before in Den haag located 
-                around the beautiful Noordeinde at Noordeinde 39 that’s 
-                where you can find this great gem. A nice relaxing atmosphere, 
-                this cafe hosts a special theme where you as eat you are surrounded by 
-                books you can pick and choose from and read at your leisure, and at the end you can choose buy them or any book that caught your fancy. this is a perfect 
-                place to enjoy your breakfast and start your day. if you want to <a href="bookstore.nl">see more you can explore their site</a> 
+                The Japanese Garden has a unique and special atmosphere. 
+                This is due in part to the beautiful moss cover. 
+                There are also beautiful and rare plants and trees in the garden. 
+                In the spring you can admire the azaleas, rhododendrons and Japanese
+                cherry blossom trees. During the autumn the garden is exceptionally
+                colourful with the autumn hues of the different Japanese maple trees. 
+                Do you wish to come and experience it yourself. <a href="https://www.denhaag.nl/en/nature-and-environment/japanese-garden-in-clingendael-park/">well follow us and see when its open!</a> 
             </p>
         </article>
         <figure>
-            <img src="img/bkstore_hallway.jpg" alt="statue infront of peace paleis" title="statue infront of peace paleis"> 
+            <img src="img/japanGarden2.jpg" alt="Arrangement of summer japanese trees over a pond" title="Arrangement of summer japanese trees over a pond"> 
             <figcaption>
-                I will eventually change this... maybe.
+                <strong>Arrangement of summer japanese trees over a pond</strong>
             </figcaption>
         </figure>
     </section>
     <section>
         <article>
-            <h2>Insta worthy</h2>
+            <h2>Experience japan's beauty</h2>
             <p>
-                Other than the delicous food and drinks, the vibe and looks of this cafe is something else.
-                Truly unique compare to the beautiful stores surrounding it. 
-                Which in its own way makes it stand out, 
-                it’s also a great place to post your instagram stories and pictures.
+                The garden contains stone lanterns in all shapes and sizes. It also has 2 water casks. 
+                One water cask has 4 images of Buddhas. The other water cask is in the shape of a lotus
+                flower. The pavilion offers a great vantage point to admire the garden. 
+                It was made by a countess, who travlled to japan and fell in love, she wanted a 
+                small piece of the experience with her, 
+                so she decided to buuld this lovely garden for all to see and enjoy.
             </p>     
         </article>
         <figure>
-            <img src="img/bkstore_pattio.jpg" alt="statue infront of peace paleis" title="statue infront of peace paleis"> 
+            <img src="img/japanGarden3.jpg" alt="beautiful japanese shrine with a bozu statue" title="beautiful japanese shrine with a bozu statue"> 
             <figcaption>
-                I will eventually change this... maybe.
+                <strong>Beautiful japanese shrine with a bozu statue</strong>
             </figcaption>
         </figure>
     </section>
@@ -100,6 +103,9 @@
         <p>
             This page is copyrighted by Hunter Pandt &copy; 2024
         </p>
+        <aside>
+            <img src="/img/instagram-logo-instagram-icon-transparent-free-png.webp" alt="insta logo" title="insta logo">
+        </aside>
     </footer>
 </body>
 </html>
