--- a/thefiddler.html
+++ b/thefiddler.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Hunter Pandt">
+    <meta name="keywords" content="travel, hidden gems, sightseeing, The Hague, local guides" />
+
     <title>The fiddler</title>
     <link rel="stylesheet" href="/css/pages.css">
 </head>
@@ -36,70 +38,76 @@
             </ul>
         </nav> 
       </header>
-      <article class="banner">
+    <article class="banner">
     
-      </article>
-      <section>
-          <article>
-              <h1>The Bookstore cafe</h1>
-              <p>
-                  Hungry and have no where to go. you’ve tried all the main stream places you’ve seen on 
-                  <em> TikTok or Instagram</em> and are now bored of them and want to try something new. 
-                  Well there’s many such places here in the wonderful city of Den haag, 
-                  and this here, is one of the unknown gems that litter this city. 
-                  there’s many places out there to have a lovely breakfasrt or 
-                  cup of tea/coffee but none are like this.
-              </p>
-          </article>
-          <figure>
-              <img src="img/bkstore_hallentree.jpg" alt="statue infront of peace paleis" title="statue infront of peace paleis"> 
-              <figcaption>
-                  I will eventually change this... maybe.
-              </figcaption>
-          </figure> 
-      </section>
+    </article>
+    <section>
+        <article>
+            <h1>The fiddler</h1>
+            <p>
+                A night out, is something everyone does. Some once in a blue moon, 
+                others every so often but it gets boring going to the same popular places that 
+                everyone knows. Either cause its filled to the brim or because you’ve been there
+                so much it has gotten stale. Well here’s a fresh new place for you to enjoy 
+                a hidden gem just waiting for some one to come by and have the time of their lifes
+            </p>
+        </article>
+        <figure>
+            <img src="img/fiddlerentree.jpg" alt="Entrance to the Fiddler" title="Entrance to the Fiddler"> 
+            <figcaption>
+                <strong>Entrance to the wonderful Fiddler</strong>
+            </figcaption>
+        </figure> 
+    </section>
   
-      <section>
-          <article>
-              <h2>Read at your leisure</h2>
-              <p>
-                  The bookstore cafe is unlike any other you have seen before in Den haag located 
-                  around the beautiful Noordeinde at Noordeinde 39 that’s 
-                  where you can find this great gem. A nice relaxing atmosphere, 
-                  this cafe hosts a special theme where you as eat you are surrounded by 
-                  books you can pick and choose from and read at your leisure, and at the end you can choose buy them or any book that caught your fancy. this is a perfect 
-                  place to enjoy your breakfast and start your day. if you want to <a href="bookstore.nl">see more you can explore their site</a> 
-              </p>
-          </article>
-          <figure>
-              <img src="img/bkstore_hallway.jpg" alt="statue infront of peace paleis" title="statue infront of peace paleis"> 
-              <figcaption>
-                  I will eventually change this... maybe.
-              </figcaption>
-          </figure>
-      </section>
-      <section>
-          <article>
-              <h2>Insta worthy</h2>
-              <p>
-                  Other than the delicous food and drinks, the vibe and looks of this cafe is something else.
-                  Truly unique compare to the beautiful stores surrounding it. 
-                  Which in its own way makes it stand out, 
-                  it’s also a great place to post your instagram stories and pictures.
-              </p>     
-          </article>
-          <figure>
-              <img src="img/bkstore_pattio.jpg" alt="statue infront of peace paleis" title="statue infront of peace paleis"> 
-              <figcaption>
-                  I will eventually change this... maybe.
-              </figcaption>
-          </figure>
-      </section>
+    <section>
+        <article>
+            <h2>Have your fill!</h2>
+            <p>
+                The fiddler is a wonderful authentic english pub, that serves authenic beer and alcohol, 
+                besides drinks they alse serve a variety of food and snacks ranging from bar snacks
+                (bitterballen, croquets etc) to full course meals like burgers, steaks and their 
+                specials of the day. we encourage you to come down and try some of the specialties ,
+                it is situated not far from the Haagsche Bluf by Riviervismarkt 1.  
+                Not far from the Centrum, this is a perfect 
+                place to go before heading out clubbing or to enjoy a fun night. 
+                So are you ready to party, <a href="https://www.fiddler.nl/">then lets check it out</a> 
+            </p>
+        </article>
+        <figure>
+            <img src="img/fiddler_outside.jpg" alt="Outside of the bar" title="Outside of the bar"> 
+            <figcaption>
+                <strong>Outside of the bar</strong>
+            </figcaption>
+        </figure>
+    </section>
+    <section>
+        <article>
+            <h2>More than food!</h2>
+            <p>
+                But a night out can’t be completed with just food and drinks to liven up the place 
+                they also host many fun events you can take part in, from sports events with many 
+                discounted drinks and snack to help make watching the game all the more lively and 
+                fun to team events en indivdual ones like quiz nights. so thers always something 
+                to do while you are out. 
+                So come by and enjoy this nice authenic bar and make your night something to remember. 
+            </p>     
+        </article>
+        <figure>
+            <img src="img/fiddler_inside.jpg" alt="Inner bar with some customers" title="Inner bar with some customers"> 
+            <figcaption>
+                <strong>Inner bar with some customers</strong>
+            </figcaption>
+        </figure>
+    </section>
       
-      <footer>
-          <p>
-              This page is copyrighted by Hunter Pandt &copy; 2024
-          </p>
-      </footer>
+    <footer>
+        <p>
+            This page is copyrighted by Hunter Pandt &copy; 2024
+        </p>
+        <aside>
+            <img src="/img/instagram-logo-instagram-icon-transparent-free-png.webp" alt="insta logo" title="insta logo">
+        </aside>
+    </footer>
 </body>
 </html>
