--- a/contactpage.html
+++ b/contactpage.html
@@ -66,6 +66,7 @@
                 <input type="number" name="number" id="number">
                 <label for="message">Message:</label>
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="Write your message here" required></textarea>
+                <!-- Couldnt fix the button or layout so left it as is, since it didnt look that bad, did make it responsive -->
                 <input id="btn" type="submit" value="Submit">
             </fieldset>
         </form>
@@ -76,6 +77,7 @@
 		<p>
 			This page is copyrighted by Hunter Pandt &copy; 2024
 		</p>
+        <!-- add aside to the footer since it is not in the original design -->
 		<aside>
 			<img src="/img/instagram-logo-instagram-icon-transparent-free-png.webp" alt="insta logo" title="insta logo">
 		</aside>
