--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <nav>
+            <!-- doesnt work need to brush up on javascript -->
             <span class="burger-icon" onclick="toggleMenu()">&#9776;</span>
             <ul class="menu">
                 <li>
@@ -77,7 +78,7 @@
                 </p>
             </article> 
         </section>
-
+        <!-- for the cards so they appear in a row -->
         <section id="row">
 
             <article class="card">
